<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/timetableHolder">

        <LinearLayout
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:divider="@drawable/row_item_divider"
                android:background="@drawable/top_bottom_divider"
                android:id="@+id/dayDisplay" android:layout_width="match_parent" android:layout_weight="2"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view0" android:layout_weight="2"/>
            <TextView
                    android:text="@string/mon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/monTextView"
                    android:textAlignment="center"/>

            <TextView
                    android:text="@string/tue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/tueTextView"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/wed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/wedTextView"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/thu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/thuTextView"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/fri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/friTextView"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/sat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/satTextView"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/sun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/sunTextView"
                    android:textAlignment="center"/>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/rowsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:context=".WeekViewFragment"
                android:orientation="vertical" app:layout_constraintTop_toBottomOf="@id/dayDisplay"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        >
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:id="@+id/events_columns"
                android:showDividers="middle"
                android:divider="@drawable/row_item_divider"
                app:layout_constraintTop_toBottomOf="@id/dayDisplay" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible" app:layout_constraintBottom_toBottomOf="@id/rowsList">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/eventColumn0" android:layout_weight="2"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/eventColumn1"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/eventColumn2"
                    android:layout_weight="2"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/eventColumn3"
                    android:layout_weight="2"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/eventColumn4"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/eventColumn5"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/eventColumn6"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/eventColumn7"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</ScrollView>